# projeto-ml

./: README.md  app.py  pyproject.toml  vector-cuda.py  zigzag.py
