[project]
name = "projeto-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "ecaversan",email = "ecaversan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
